# OrdoAbChaos

./: .gitignore  README.md  poetry.lock1  pyproject.toml  scripts.py  server.py
api/: mutation.py  queries.py
attendance/: resolvers.py  types.py
disciplines/: resolvers.py
faculties/: resolvers.py
groups/: resolvers.py  types.py
schedule/: resolvers.py  types.py
server/: Dockerfile  pyproject.toml
server/src/: server.py
server/src/api/: __init__.py  mutation.py  queries.py
server/src/attendance/: resolvers.py  types.py
server/src/disciplines/: resolvers.py  types.py
server/src/faculties/: resolvers.py  types.py
server/src/groups/: __init__.py  types.py
server/src/importer/: database.db  scos_to_ordo.py
server/src/schedule/: resolvers.py  types.py
server/src/sql/: local_base.py  sql_models.py
server/src/students/: resolvers.py  types.py
server/src/teachers/: resolvers.py  types.py
settings/: settings.py
sql/: local_base.py  sql_models.py
src/: server.py
src/attendance/: resolvers.py  types.py
src/groups/: resolvers.py  types.py
src/schedule/: resolvers.py  types.py
src/sql/: __init__.py  local_base.py  sql_models.py
src/students/: resolvers.py  types.py
students/: resolvers.py
teachers/: resolvers.py  types.py
